# lifegame

./: CMakeLists.txt  README.md  board.cpp  board.hpp  test.cpp
